V1.4.3. Making app build compatible, downgraded from Java 22 to Java 17 for this